Fixed picture too big error

--- a/static/css/base_style.css
+++ b/static/css/base_style.css
@@ -3,6 +3,7 @@
        	margin-bottom: auto;
        	border-radius: 50%;
        	position: relative;
+       	width: 50px; height:50px;
        }
 
        .image_inner_container{
